# StoreOtomation

./: README.md
MağazaOtomasyonu/berat/: CMakeLists.txt  MagazaMain.cpp  MagazaMain.h  main.cpp  ortak.h
MağazaOtomasyonu/berat/ayarlar/: uygulamaayarlari.cpp  uygulamaayarlari.h
MağazaOtomasyonu/berat/ekranlar/bilesenler/: saribbon.cpp  saribbon.h
MağazaOtomasyonu/berat/ekranlar/diger/: ayarekrani.cpp  ayarekrani.h  ayarekrani.ui  yeniverigirisekrani.cpp  yeniverigirisekrani.h  yeniverigirisekrani.ui
MağazaOtomasyonu/berat/ekranlar/eylemler/: Sablonlar.h  eylemyoneticisi.cpp  eylemyoneticisi.h
MağazaOtomasyonu/berat/ekranlar/giris/: mgzekran.cpp  mgzekran.h  mgzekran.ui  veriekraneslesmesi.cpp  veriekraneslesmesi.h  verinesnesiatamaarayuzu.cpp  verinesnesiatamaarayuzu.h  verinesnesiatamaarayuzu.ui
MağazaOtomasyonu/berat/kaynaklar/: amoled.qss  console_style.qss  elegant_dark.qss  kaynaklar.qrc  manjaro_mix.qss  material_dark.qss  ubuntu.qss
MağazaOtomasyonu/berat/veri/: konteynir.h  konteynirler.h  ortak.h  veritabani.cpp  veritabani.h
MağazaOtomasyonu/berat/veri/konteynirler/: magazabilgilerikonteynir.cpp  magazabilgilerikonteynir.h  musterikonteynir.cpp  musterikonteynir.h  sipariskonteynir.cpp  sipariskonteynir.h  siparisurunukonteynir.cpp  siparisurunukonteynir.h  urunkategorisikonteynir.cpp  urunkategorisikonteynir.h  urunlerkonteynir.cpp  urunlerkonteynir.h  urunozelliklerikonteynir.cpp  urunozelliklerikonteynir.h
MağazaOtomasyonu/berat/veri/veri_nesneleri/: magazabilgileri.cpp  magazabilgileri.h  musteri.cpp  musteri.h  ortak_veri_sinifi.cpp  ortak_veri_sinifi.h  siparis.cpp  siparis.h  siparisurunu.cpp  siparisurunu.h  urunkategorisi.cpp  urunkategorisi.h  urunler.cpp  urunler.h  urunozellikleri.cpp  urunozellikleri.h  urunyorumu.cpp  urunyorumu.h
